--- a/qr-generator/index.html
+++ b/qr-generator/index.html
@@ -51,7 +51,7 @@
               display: flex;
             ">
             <div _ngcontent-serverapp-c130="" class="navbar-header">
-              <a _ngcontent-serverapp-c130="" routerlink="/" class="navbar-brand" ng-reflect-router-link="/" href="/"><span _ngcontent-serverapp-c130="" fxshow="false" fxshow.gt-xs="" ng-reflect-fx-show="false" ng-reflect-fx-show.gt-xs=""><img _ngcontent-serverapp-c130="" id="appLogo" width="159" alt="homepage" class="light-logo" src="http://localhost:8787/settings/logo.png"></span></a>
+              <a _ngcontent-serverapp-c130="" routerlink="/" class="navbar-brand" ng-reflect-router-link="/" href="/"><span _ngcontent-serverapp-c130="" fxshow="false" fxshow.gt-xs="" ng-reflect-fx-show="false" ng-reflect-fx-show.gt-xs=""><img _ngcontent-serverapp-c130="" id="appLogo" width="159" alt="homepage" class="light-logo" src="http://localhost:5000/settings/logo.png"></span></a>
             </div>
             <button _ngcontent-serverapp-c130="" mat-icon-button="" id="menu_close" value="sidebarclosed" class="mat-focus-indicator mat-icon-button mat-button-base" style="color: white">
               <span class="mat-button-wrapper">
@@ -1101,6 +1101,11 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-  <script src="runtime-es2015.24f7295fcbd3b5408f05.js" type="module"></script><script src="runtime-es5.24f7295fcbd3b5408f05.js" nomodule defer></script><script src="polyfills-es5.67a6732f91fb79a4944b.js" nomodule defer></script><script src="polyfills-es2015.92f0fdddd83ccbae5e17.js" type="module"></script><script src="main-es2015.616aad47654b9376dda1.js" type="module"></script><script src="main-es5.616aad47654b9376dda1.js" nomodule defer></script>
+  <script src="runtime-es2015.24f7295fcbd3b5408f05.js" type="module"></script>
+  <script src="runtime-es5.24f7295fcbd3b5408f05.js" nomodule defer></script>
+  <script src="polyfills-es5.67a6732f91fb79a4944b.js" nomodule defer></script>
+  <script src="polyfills-es2015.92f0fdddd83ccbae5e17.js" type="module"></script>
+  <script src="main-es2015.616aad47654b9376dda1.js" type="module"></script>
+  <script src="main-es5.616aad47654b9376dda1.js" nomodule defer></script>
 
 </body></html>
